--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           This project was coded by
           <a href="#" target="_blank">Your name</a> and is
           <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://web-app2.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
     </div>
