--- a/index.html
+++ b/index.html
@@ -48,8 +48,13 @@
         <p>
           This project was coded by
           <a href="#" target="_blank">Pheladi Rachoshi</a> and is
-          <a href="https://github.com/PheladiR/Github-hosting" target="_blank"> on GitHub</a> and
-          <a href="https://web-app2.netlify.app/" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/PheladiR/Github-hosting" target="_blank">
+            on GitHub</a
+          >
+          and
+          <a href="https://web-app2.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
